# Lottery_Contract_Solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md
.specstory/history/: 2025-07-19_16-06Z-explain-code-line-by-line.md
programs/lottery/: Cargo.toml
programs/lottery/src/: lib.rs  utils.rs
scripts/: buy_multiple_tickets.ts  buy_ticket.ts  claim_prize.ts  easy_select_winner.ts  initialize.ts  select_winner.ts  select_winner_with_switchboard.ts  selectwinner.ts  switchboard_setup.ts
