[package]
name = "lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = "0.7.8"
anchor-lang = { version = "0.29.0", features = ["init-if-needed","event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
default-env = "0.1.1"
solana-security-txt = "1.1.1"
bytemuck = "1.15.0"
switchboard-on-demand = "=0.4.9"
serde = { version = "1.0", features = ["derive"] }